//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  password Password
  username String [unique, not null]
  email String [unique, not null]
  firstName String [not null]
  lastName String
  avatarUrl String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  Cart Cart [not null]
}

Table Password {
  id String [pk]
  userId String [unique, not null]
  User User [not null]
  hash String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Product {
  id String [pk]
  cartItems CartItem [not null]
  slug String [unique]
  name String [unique, not null]
  imageUrl String [not null]
  price Int [not null]
  unit String [not null, default: 'gr']
  description String
  stock Int [not null]
  sold Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Cart {
  id String [pk]
  user User [not null]
  userId String [not null]
  items CartItem [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CartItem {
  id String [pk]
  product Product [not null]
  productId String [not null]
  cart Cart [not null]
  cartId String [not null]
  quantity Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Ref: Password.userId - User.id [delete: Cascade]

Ref: Cart.userId > User.id [delete: Cascade]

Ref: CartItem.productId > Product.id [delete: Cascade]

Ref: CartItem.cartId > Cart.id